# airjedi-bevy

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
assets/: airplane.glb
assets/shaders/: terrain.wgsl
docs/plan/: aviation-code-review.md  ui-consolidation-review.md
docs/plans/: 2026-01-28-bevy-0.18-upgrade-design.md  2026-01-28-configuration-screen-design.md  2026-02-01-desktop-feature-migration-design.md  2026-02-01-desktop-feature-migration.md  2026-02-06-3d-view-design.md  2026-02-14-egui-aesthetix-theming-design.md  2026-02-14-egui-aesthetix-theming.md  2026-02-15-statusbar-design.md  2026-02-15-statusbar.md  2026-02-16-realistic-sky-design.md  2026-02-18-3d-horizon-atmosphere-design.md  2026-02-18-3d-horizon-atmosphere.md  2026-02-20-atmosphere-realism-design.md  2026-02-20-atmosphere-realism.md  2026-02-20-yup-atmosphere-migration-design.md  2026-02-20-yup-atmosphere-migration.md  2026-02-23-bevy-inspector-egui-design.md  2026-02-23-bevy-inspector-egui-plan.md  2026-02-24-3d-object-selection-design.md  2026-02-24-3d-object-selection.md  2026-02-25-aircraft-model-registry-design.md  2026-02-25-aircraft-model-registry.md  2026-02-25-hanabi-particle-spike-design.md  2026-02-25-hanabi-particle-spike.md  2026-02-25-macos-app-bundle-design.md  2026-02-25-macos-app-bundle.md  2026-02-25-macos-app-store-design.md  2026-02-25-macos-dmg-distribution-design.md  2026-02-28-brp-integration-design.md  2026-02-28-brp-integration.md  2026-02-28-custom-egui-widgets-design.md  2026-02-28-custom-egui-widgets.md  2026-02-28-custom-tab-shape-design.md  2026-02-28-custom-tab-shape.md
docs/research/: 3d-terrain-research.md
macos/: Info.plist.template  Makefile
macos/icons/: .gitignore
macos/scripts/: build-app.sh  gen-icons.sh
src/: brp.rs  build_info.rs  camera.rs  config.rs  debug_3d_hud.rs  debug_panel.rs  dock.rs  geo.rs  hud.rs  input.rs  inspector.rs  keyboard.rs  main.rs  map.rs  paths.rs  render_layers.rs  statusbar.rs  theme.rs  tile_cache.rs  tiles.rs  toolbar.rs  tools_window.rs  ui_panels.rs  units.rs  zoom.rs
src/adsb/: connection.rs  mod.rs  sync.rs
src/aircraft/: altitude.rs  components.rs  detail_panel.rs  emergency.rs  hanabi_plugin.rs  hanabi_selection.rs  hanabi_trails.rs  list_panel.rs  mod.rs  picking.rs  plugin.rs  prediction.rs  staleness.rs  stats_panel.rs  trail_renderer.rs  trails.rs  typeinfo.rs  typeloader.rs
src/airspace/: mod.rs
src/aviation/: airports.rs  loader.rs  mod.rs  navaids.rs  plugin.rs  runways.rs  types.rs
src/bookmarks/: mod.rs
src/coverage/: mod.rs
src/data/: downloader.rs
src/data_ingest/: canonical.rs  fixture_tests.rs  http_cache.rs  mod.rs  pipeline.rs  provider.rs  scheduler.rs
(+42 files in other folders)
