[package]
name = "airjedi_bevyui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17"
bevy_slippy_tiles = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
adsb-client = { path = "/Users/ccustine/development/aviation/airjedi-desktop/crates/adsb-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
bevy_egui = "0.38"
toml = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
