[package]
name = "airjedi_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
bevy_slippy_tiles = { git = "https://github.com/ccustine/bevy_slippy_tiles", branch = "bevy-0.18" }
# bevy_slippy_tiles = "0.11"    # uncomment when released upstream
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
adsb-client = { path = "/Users/ccustine/development/aviation/airjedi-desktop/crates/adsb-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
bevy_egui = "0.39"
catppuccin = "2.6"
egui-aesthetix = { git = "https://github.com/thebashpotato/egui-aesthetix", features = ["carl", "nord", "standard", "tokyo_night"] }
toml = "0.8"
dirs = "6.0"
csv = "1.3"

[dev-dependencies]
egui_kittest = "0.33"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
