[package]
name = "airjedi_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["jpeg"] }
bevy_slippy_tiles = { path = "/Users/ccustine/development/aviation/bevy_slippy_tiles/.worktrees/tile-format" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
adsb-client = { path = "/Users/ccustine/development/aviation/airjedi-desktop/crates/adsb-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
bevy_egui = "0.39"
bevy-inspector-egui = "0.36"
egui_tiles = "0.14"
egui-phosphor = "0.11"
catppuccin = "2.6"
egui-aesthetix = { git = "https://github.com/thebashpotato/egui-aesthetix", features = ["carl", "nord", "standard", "tokyo_night"] }
toml = "0.8"
dirs = "6.0"
csv = "1.3"
solar-positioning = "0.3"
libc = "0.2"

[dev-dependencies]
egui_kittest = "0.33"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
